# se-toolkit-lab-8

./: .env.agent.example  .env.bot.example  .env.docker.example  .env.example  .env.tests.e2e.example  .env.tests.unit.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  README.md  REPORT.md  docker-compose.yml  flake.nix  index.md  pyproject.toml  run_eval.py  solve_task4.sh  task4_all_in_one.sh  task4_fix.sh
.claude/memory/: lab-conventions.md
.github/ISSUE_TEMPLATE/: 01-task.yml
.github/workflows/: check-openapi.yml  handle-forks.yml  handle-task-issues.yml  lint.yml
backend/: .env.tests.e2e.example  .env.tests.unit.example  Dockerfile  openapi.json  pyproject.toml
backend/app/: etl.py  main.py  settings.py
backend/app/models/: interaction.py
backend/app/routers/: analytics.py  interactions.py  items.py  learners.py
backend/tests/e2e/: conftest.py
backend/tests/unit/: conftest.py  test_interactions.py
caddy/: Caddyfile
client-telegram-bot/: .dockerignore  .env.bot.example  .gitignore  Dockerfile  PLAN.md  README.md  bot.py  config.py  pyproject.toml
client-telegram-bot/handlers/: __init__.py  commands.py  intent_router.py  renderer.py
client-telegram-bot/services/: __init__.py  llm_client.py  lms_client.py  nanobot_client.py
client-web-flutter/: .dockerignore  .env.example  .gitignore  Dockerfile  pubspec.yaml
client-web-flutter/lib/: chat_screen.dart  llm_service.dart  lms_service.dart  login_screen.dart  main.dart
client-web-flutter/web/: index.html  manifest.json
client-web-react/: .env.example  Dockerfile  pnpm-lock.yaml
client-web-react/src/: App.css
contributing/: configuration.md
contributing/conventions/: conventions.md  git.md  meeting-report.md  skills.md
docs/design/: architecture.md  nanobot.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Dashboard.tsx
instructors/: README.md  course.md  ideas.md  lab-plan.md
lab/setup/: setup-full.md  (+1 more)
mcp/: mcp_obs.py
nanobot/: Dockerfile  architecture.md  entrypoint.py  pyproject.toml
nanobot/cron/: jobs.json
nanobot/nanobot_common/: __init__.py  formatters.py  lms_client.py
nanobot/nanobot_lms_mcp/: __init__.py  __main__.py
nanobot/nanobot_webchat/: __init__.py
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
nanobot_webchat/: pyproject.toml
scripts/: export-openapi.py  query-qwen-code-api.py
wiki/: api.md  architectural-views.md  architecture.md  autochecker-api.md  autochecker.md  backend-dotenv-tests-e2e-secret.md  backend-dotenv-tests-unit-secret.md  backend.md  bash.md  bot.md  browser-developer-tools.md  caddy.md  client-telegram-bot.md  client-web-react-dotenv-secret.md  coding-agents.md  communication-protocol.md  computer-networks.md  constants.md  course.md  database-modeling.md  database.md  direnv.md  docker-compose-yml.md  docker-compose.md  docker-postgres.md  docker.md  dotenv-agent-secret.md  dotenv-bot-secret.md  dotenv-docker-secret.md  dotenv-tests-e2e-secret.md  dotenv-tests-unit-secret.md  environments.md  file-formats.md  file-system.md  frontend-dotenv-secret.md  frontend.md  gateway.md  git-vscode.md  git-workflow.md  git.md  (+56 more)
(+60 files in other folders)
