[project]
name = "nanobot-lms-gateway"
version = "1.0.0"
description = "Nanobot AI assistant gateway for LMS with webchat channel plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.1.4",
]

[tool.setuptools.packages.find]
include = ["nanobot_common*", "nanobot_webchat*"]

[project.entry-points."nanobot.channels"]
webchat = "nanobot_webchat:WebChatChannel"
